--- a/Contact.html
+++ b/Contact.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <form action="submit_contact_form.php" method="post"> <!-- Replace with your server-side script if u want later -->
+    <form action="submit_contact_form.php" method="post"> <!-- Replace with your server-side script if i want later -->
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required>
 
